update title to 'file compression tool by ramiro!' with blue color styling

--- a/ConsoleApp1/Views/Home/Index.cshtml
+++ b/ConsoleApp1/Views/Home/Index.cshtml
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>file compression tool</title>
+    <title>file compression tool by ramiro!</title>
+    <style>
+        .title {
+            color: #4488DD;
+        }
+    </style>
 </head>
 <body>
-    <h1>file compression tool</h1>
+    <h1 class="title">file compression tool by ramiro!</h1>
     
     <h2>1. compress file (singular)</h2>
     <form id="compressForm" enctype="multipart/form-data">
